- moved showing Configuration file from Running info menu to Settings-> Configuration file

Improved File selector: 
- Can show recent folders (press space on recent files)

Improved DSK viewer:
- better filesystem detection
- show hidden and read only files
- show disk specification format
- show where files are located on Visual Floppy

Improved DSK extractor:
- better filesystem detection

Improved Debug Console: better refresh, dynamic width?? (TODO)
Improved Debug Messages: allow to filter by message class (DSK, PD765, etc...)
Improved Debug I/O ports window: autoresize content height when do not fit in window

Improved Debug CPU:
- switched function keys "m" and "o": now "x" change mode, and "m" change memptr (to be coherent with other similar windows) 
- added (hl), (de), (bc)
- added (nn) when selecting an opcode like: ld reg,(nn) and ld (nn),reg
- added (ix+d), (iy+d) when selecting an opcode like: ld reg,(IX+d), etc
- added continuos speed 4 (run 10 opcodes every time, with no pause)
- show last memory pointer when changing it
- show B register on satisfy condition for DJNZ
- added new functions OPMRV(e), OPMWV(e), OPMRA(e), OPMWA(e): these return 1 if the last opcode has set any of these variables to e.
- added pseudoregister EPC to parser to match memory bank and offset for PC register
- allow holding keys for quick cursor move, etc 
- watches now show numbers in hexadecimal format

Improved View Sprites: 
- sprite is no longer disabled when changing memory pointer
- you can view sprites up to 1024x1024
- show PCW common format screen

Improved changing pointer on some windows: can use an expression when changing memory pointer on Debug CPU, View Sprites, Hexdump, Disassemble, Poke
Improved changing to machines with big displays (Next, QL, CPC...): zoom is autochanged to 1
Improved joystick type selection